crates/muropeptide/src/parser.rs
use std::{cell::RefCell, iter::zip};

use itertools::{EitherOrBoth, Itertools};
use miette::Diagnostic;
use nom::{
    branch::alt,
    bytes::complete::tag,
    character::complete::{alpha1, alphanumeric1, char, one_of, space0, space1},
    combinator::{cut, map, opt, recognize},
    error::ErrorKind,
    multi::{many0, many1, separated_list1},
    sequence::{delimited, pair, preceded, terminated, tuple},
    IResult,
};
use nom_miette::{map_res, wrap_err, FromExternalError, LabeledErrorKind, LabeledParseError};
use polychem::{
    errors::PolychemError,
    parsers::{
        chemical_composition,
        errors::PolychemErrorKind,
        primitives::{count, lowercase, offset_kind, uppercase},
    },
    Count, ModificationId, Polymer, Polymerizer,
};
use thiserror::Error;

use crate::{
    AminoAcid, Connection, CrosslinkDescriptor, CrosslinkDescriptors, LateralChain, Monomer,
    Monosaccharide, Muropeptide, PeptideDirection, Position, UnbranchedAminoAcid,
};

// FIXME: Need to think about if these should really live in another KDL config?
const PEPTIDE_BOND: &str = "Pep";
const GLYCOSIDIC_BOND: &str = "Gly";
const STEM_BOND: &str = "Stem";
const NTOC_BOND: &str = "NToC";
const CTON_BOND: &str = "CToN";
const CROSSLINK_BOND: &str = "Link";
const LAT_CROSSLINK_BOND: &str = "Lat-Link";

// FIXME: A horrible hack that's needed to specify the lifetimes captured by `impl FnMut(...) -> ...` correctly. Once
// Rust 2024 is stabilized, however, this hack can be removed. Keep an eye on:
// https://github.com/rust-lang/rust/issues/117587
// FIXME: Make private again
pub trait Captures<U> {}
impl<T: ?Sized, U> Captures<U> for T {}

// FIXME: Paste all of these EBNF comments into another file and make sure they are valid!

/// Muropeptide = Monomer , { Connection , Monomer } , [ Connection ] , [ { " " }- ,
///   ( Modifications , [ { " " }- , Crosslinks ]
///   | Crosslinks , [ { " " }- , Modifications ]
///   ) ] ;
// FIXME: Very very incomplete!
// FIXME: Needs proper testing!
// FIXME: And disgustingly messy... Needs a major refactor... When you do, remove this allow!
#[allow(clippy::too_many_lines)]
pub fn muropeptide<'z, 'a, 'p, 's>(
    polymerizer: &'z Polymerizer<'a, 'p>,
) -> impl FnMut(&'s str) -> ParseResult<Muropeptide<'a, 'p>> + Captures<(&'z (), &'a (), &'p ())> {
    move |i| {
        let polymer = RefCell::new(polymerizer.new_polymer());
        // FIXME: Perhaps there is a better way to shorten that `polymer` borrow...
        let (rest, (monomers, connections)) = {
            let multimer = map(
                tuple((
                    monomer(&polymer),
                    many0(pair(connection, monomer(&polymer))),
                )),
                |(monomer, multimers)| {
                    let mut monomers = Vec::with_capacity(1 + multimers.len());
                    // PERF: This often over-allocates by one element — is checking `circular_connection.is_some()`
                    // something that's worth the branch here? Need to benchmark that!
                    let mut connections = Vec::with_capacity(multimers.len() + 1);

                    monomers.push(monomer);
                    for (connection, monomer) in multimers {
                        connections.push(connection);
                        monomers.push(monomer);
                    }

                    (monomers, connections)
                },
            );
            let opt_crosslinks = opt(preceded(space1, crosslinks));

            let mut parser = map_res(
                pair(multimer, opt_crosslinks),
                |((monomers, mut connections), crosslinks)| {
                    let crosslink_connections =
                        connections.iter_mut().filter_map(|conn| match conn {
                            Connection::GlycosidicBond => None,
                            Connection::Crosslink(descriptors) | Connection::Both(descriptors) => {
                                Some(descriptors)
                            }
                        });
                    let crosslinks = crosslinks.into_iter().flatten();

                    for either_or_both in crosslink_connections.zip_longest(crosslinks) {
                        match either_or_both {
                            EitherOrBoth::Both(connection, crosslinks) => {
                                *connection = vec![crosslinks];
                            }
                            _ => return Err(ConstructionError::CrosslinkCountMismatch),
                        }
                    }

                    let mut last_glycan = None;
                    let mut last_peptide = None;
                    let monomer_pairs = monomers.iter().circular_tuple_windows();
                    let connection_refs = connections.iter();
                    for ((left, right), connection) in zip(monomer_pairs, connection_refs) {
                        if !left.glycan.is_empty() {
                            last_glycan = Some(&left.glycan);
                        }
                        if !left.peptide.is_empty() {
                            last_peptide = Some(&left.peptide);
                        }

                        let gly_bond = || -> Result<(), ConstructionError> {
                            let donor = *last_glycan
                                .and_then(|lg| lg.last())
                                .ok_or(ConstructionError::NoGlycan)?;
                            let acceptor =
                                *right.glycan.first().ok_or(ConstructionError::NoGlycan)?;
                            polymer
                                .borrow_mut()
                                .bond_residues(GLYCOSIDIC_BOND, donor, acceptor)?;
                            Ok(())
                        };
                        let crosslink = |descriptors| -> Result<(), ConstructionError> {
                            fn lookup_amino_acid(
                                peptide: &[AminoAcid],
                                idx: u8,
                            ) -> Result<&AminoAcid, ConstructionError> {
                                peptide
                                    .get(idx.saturating_sub(1) as usize)
                                    .ok_or(ConstructionError::NoStemResidue)
                            }
                            for &descriptor in descriptors {
                                // FIXME: A nasty, very lazy hack:
                                let mut lateral_acceptor = false;
                                // FIXME: Are lateral chains ever donors?
                                let lookup_donor = |peptide, idx| {
                                    lookup_amino_acid(peptide, idx).map(|aa| aa.residue)
                                };
                                // FIXME: Good lord... What a mess...
                                let mut lookup_acceptor =
                                    |peptide, idx| -> Result<_, ConstructionError> {
                                        let AminoAcid {
                                            residue,
                                            lateral_chain,
                                        } = lookup_amino_acid(peptide, idx)?;
                                        Ok(*if let Some(LateralChain { peptide, .. }) =
                                            lateral_chain
                                        {
                                            lateral_acceptor = true;
                                            // SAFETY: All `LateralChain`s carry non-empty vectors, so this call to
                                            // `.last()` should never fail!
                                            peptide.last().unwrap()
                                        } else {
                                            residue
                                        })
                                    };
                                // FIXME: NAMING!!!
                                let left_peptide =
                                    last_peptide.ok_or(ConstructionError::NoPeptide)?;
                                let right_peptide = &right.peptide;
                                // FIXME: Awful...
                                if right_peptide.is_empty() {
                                    return Err(ConstructionError::NoPeptide);
                                }
                                let (donor, acceptor) = match descriptor {
                                    CrosslinkDescriptor::DonorAcceptor(l_idx, r_idx) => (
                                        lookup_donor(left_peptide, l_idx)?,
                                        lookup_acceptor(right_peptide, r_idx)?,
                                    ),
                                    CrosslinkDescriptor::AcceptorDonor(l_idx, r_idx) => (
                                        lookup_donor(right_peptide, r_idx)?,
                                        lookup_acceptor(left_peptide, l_idx)?,
                                    ),
                                };

                                let bond = if lateral_acceptor {
                                    LAT_CROSSLINK_BOND
                                } else {
                                    CROSSLINK_BOND
                                };
                                polymer.borrow_mut().bond_residues(bond, donor, acceptor)?;
                            }
                            Ok(())
                        };
                        match connection {
                            Connection::GlycosidicBond => gly_bond()?,
                            Connection::Crosslink(descriptors) => crosslink(descriptors)?,
                            Connection::Both(descriptors) => {
                                gly_bond()?;
                                crosslink(descriptors)?;
                            }
                        }
                    }

                    Ok((monomers, connections))
                },
            );
            parser(i)?
        };

        let polymer = polymer.into_inner();
        Ok((
            rest,
            Muropeptide {
                polymer,
                monomers,
                connections,
            },
        ))
    }
}

/// Monomer = Glycan , [ "-" , Peptide ] | Peptide ;
// FIXME: Make private again
pub fn monomer<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<Monomer> + Captures<(&'c (), &'a (), &'p ())> {
    let optional_peptide = opt(preceded(char('-'), cut(peptide(polymer))));
    let glycan_and_peptide = map_res(
        pair(glycan(polymer), optional_peptide),
        |(glycan, peptide)| {
            if let Some(peptide) = peptide {
                // SAFETY: Both the `glycan` and `peptide` parsers ensure at least one residue is present, so `.last()` and
                // `.first()` will never return `None`!
                let donor = *glycan.last().unwrap();
                let acceptor = peptide.first().unwrap().residue;

                polymer
                    .borrow_mut()
                    .bond_residues(STEM_BOND, donor, acceptor)?;
                Ok(Monomer { glycan, peptide })
            } else {
                Ok(Monomer {
                    glycan,
                    peptide: Vec::new(),
                })
            }
        },
    );

    let just_peptide = map(peptide(polymer), |peptide| Monomer {
        glycan: Vec::new(),
        peptide,
    });

    // FIXME: Add a `map_res` wrapping this final parser
    alt((glycan_and_peptide, just_peptide))
}

// =

/// Glycan = { Monosaccharide }- ;
fn glycan<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<Vec<Monosaccharide>> + Captures<(&'c (), &'a (), &'p ())> {
    let parser = many1(monosaccharide(polymer));
    map_res(parser, |residues| {
        polymer
            .borrow_mut()
            .bond_chain(GLYCOSIDIC_BOND, &residues)?;
        Ok(residues)
    })
}

/// Peptide = { Amino Acid }- ;
fn peptide<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<Vec<AminoAcid>> + Captures<(&'c (), &'a (), &'p ())> {
    let parser = many1(amino_acid(polymer));
    map_res(parser, |residues| {
        let residue_ids = residues.iter().map(|aa| aa.residue);
        polymer.borrow_mut().bond_chain(PEPTIDE_BOND, residue_ids)?;
        Ok(residues)
    })
}

// =

/// Monosaccharide = lowercase , [ Modifications ] ;
fn monosaccharide<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<Monosaccharide> + Captures<(&'c (), &'a (), &'p ())> {
    let parser = pair(recognize(lowercase), opt(modifications(polymer)));
    map_res(parser, |(abbr, modifications)| {
        let residue = polymer.borrow_mut().new_residue(abbr)?;
        for modification in modifications.into_iter().flatten() {
            polymer
                .borrow_mut()
                .localize_modification(modification, residue)?;
        }

        Ok(residue)
    })
}

// FIXME: Damn... This is messy... Need to sort that out!
/// Amino Acid = Unbranched Amino Acid , [ Lateral Chain ] ;
fn amino_acid<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<AminoAcid> + Captures<(&'c (), &'a (), &'p ())> {
    let parser = pair(unbranched_amino_acid(polymer), opt(lateral_chain(polymer)));
    map_res(parser, |(residue, lateral_chain)| {
        if let Some(LateralChain { direction, peptide }) = &lateral_chain {
            let c_to_n = || -> polychem::Result<_> {
                polymer
                    .borrow_mut()
                    .bond_residues(CTON_BOND, peptide[0], residue)?;
                // FIXME: Replace with `.clone()` then `.reverse()`?
                Ok(peptide.iter().copied().rev().collect())
            };
            let n_to_c = || -> polychem::Result<_> {
                polymer
                    .borrow_mut()
                    .bond_residues(NTOC_BOND, residue, peptide[0])?;
                // FIXME: This feels silly... Maybe better when `bond_chain` takes an `impl IntoIterator`?
                Ok(peptide.clone())
            };

            let chain: Vec<_> = match direction {
                // FIXME: This default should be moved to a configuration file and not be hard-coded!
                // FIXME: Furthermore, this should really return several possible polymers instead of picking one.
                // That might end up being difficult to do inline with this parsing stuff...
                // FIXME: If the peptide direction is initially unspecified, then I need to make sure that I update it
                // after working out which of the bonding patterns work (for pretty-printing later)!
                PeptideDirection::Unspecified => c_to_n().or_else(|_| n_to_c())?,
                PeptideDirection::CToN => c_to_n()?,
                PeptideDirection::NToC => n_to_c()?,
            };
            polymer.borrow_mut().bond_chain(PEPTIDE_BOND, &chain)?;
        }
        Ok(AminoAcid {
            residue,
            lateral_chain,
        })
    })
}

// =

/// Modifications = "(" , Any Modification ,
///   { { " " } , "," , { " " } , Any Modification } , ")" ;
fn modifications<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<Vec<ModificationId>> + Captures<(&'c (), &'a (), &'p ())> {
    let separator = delimited(space0, char(','), space0);
    delimited(
        char('('),
        separated_list1(separator, any_modification(polymer)),
        char(')'),
    )
}

/// Unbranched Amino Acid = [ lowercase ] , uppercase , [ Modifications ] ;
fn unbranched_amino_acid<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<UnbranchedAminoAcid> + Captures<(&'c (), &'a (), &'p ())> {
    let abbr = recognize(preceded(opt(lowercase), uppercase));
    let parser = pair(abbr, opt(modifications(polymer)));
    map_res(parser, |(abbr, modifications)| {
        let residue = polymer.borrow_mut().new_residue(abbr)?;
        for modification in modifications.into_iter().flatten() {
            polymer
                .borrow_mut()
                .localize_modification(modification, residue)?;
        }

        Ok(residue)
    })
}

// NOTE: These are not meant to be links, it's just EBNF
#[allow(clippy::doc_link_with_quotes)]
/// Lateral Chain = "[" , Peptide Direction , { Unbranched Amino Acid }- , "]" ;
fn lateral_chain<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<LateralChain> + Captures<(&'c (), &'a (), &'p ())> {
    let peptide = many1(unbranched_amino_acid(polymer));
    let parser = delimited(char('['), peptide, char(']'));
    map(parser, |peptide| LateralChain {
        direction: PeptideDirection::Unspecified,
        peptide,
    })
}

// NOTE: These are not meant to be links, it's just EBNF
#[allow(clippy::doc_link_with_quotes)]
/// Peptide Direction = [ "<" (* C-to-N *) | ">" (* N-to-C *) ] ;
fn peptide_direction(i: &str) -> ParseResult<PeptideDirection> {
    map(opt(one_of("<>")), |c| match c {
        Some('<') => PeptideDirection::CToN,
        Some('>') => PeptideDirection::NToC,
        None => PeptideDirection::Unspecified,
        _ => unreachable!(),
    })(i)
}
// =

/// Identifier = letter , { letter | digit | "_" } ;
fn identifier(i: &str) -> ParseResult<&str> {
    // PERF: Could maybe avoid allocations by using `many0_count` instead, but needs benchmarking
    let parser = recognize(pair(alpha1, many0(alt((alphanumeric1, tag("_"))))));
    wrap_err(parser, MuropeptideErrorKind::ExpectedIdentifier)(i)
}

/// Any Modification = Named Modification | Offset Modification
pub fn any_modification<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<ModificationId> + Captures<(&'c (), &'a (), &'p ())> {
    alt((named_modification(polymer), offset_modification(polymer)))
}

// FIXME: I probably need to add a lot of `wrap_err`s around these parsers!
/// Named Modification = [ Multiplier ] , Identifier
pub fn named_modification<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<ModificationId> + Captures<(&'c (), &'a (), &'p ())> {
    let parser = pair(opt(multiplier), identifier);
    map_res(parser, |(multiplier, named_mod)| {
        polymer
            .borrow_mut()
            .new_modification(multiplier.unwrap_or_default(), named_mod)
            .map_err(Into::into)
    })
}

/// Offset Modification = Offset Kind , [ Multiplier ] ,
///   Chemical Composition ;
pub fn offset_modification<'c, 'a, 'p, 's>(
    polymer: &'c RefCell<Polymer<'a, 'p>>,
) -> impl FnMut(&'s str) -> ParseResult<ModificationId> + Captures<(&'c (), &'a (), &'p ())> {
    let chemical_composition = chemical_composition(polymer.borrow().atomic_db());
    let parser = tuple((offset_kind, opt(multiplier), chemical_composition));

    map_res(parser, |(kind, multiplier, composition)| {
        polymer
            .borrow_mut()
            .new_offset_with_composition(kind, multiplier.unwrap_or_default(), composition)
            .map_err(Into::into)
    })
}

/// Connection
///   = "=" (* Crosslink *)
///   | "~" (* Glycosidic Bond *)
///   | ( "~=" | "=~" ) (* Both *)
///   ;
// FIXME: Not in love with carrying these empty Vecs around just to be populated later... Perhaps this should be a
// different type?
fn connection(i: &str) -> ParseResult<Connection> {
    // NOTE: The order here must start with the tags for `Both` — backtracking and trying the single-char parsers if
    // the two-char ones don't apply
    // PERF: There is probably a way to remove this backtracking and do things in a single-pass, but I don't know if
    // that would have a noticeable performance impact...
    let connection = alt((tag("="), tag("~")));
    let mut parser = map(connection, |c| match c {
        "~" => Connection::GlycosidicBond,
        "=" => Connection::Crosslink(Vec::new()),
        _ => unreachable!(),
    });
    // FIXME: Add error handling / reporting!
    parser(i)
}

/// Multiplier = Count , "x" ;
fn multiplier(i: &str) -> ParseResult<Count> {
    let mut parser = terminated(count, char('x'));
    // FIXME: Add error handling / reporting!
    parser(i)
}

/// Crosslinks = "(" , Crosslink Descriptors ,
///   { { " " } , "," , { " " } , Crosslink Descriptors } , ")" ;
fn crosslinks(i: &str) -> ParseResult<CrosslinkDescriptors> {
    let separator = delimited(space0, char(','), space0);
    let mut parser = delimited(
        char('('),
        separated_list1(separator, crosslink_descriptor),
        char(')'),
    );
    // FIXME: Add error handling / reporting!
    parser(i)
}

/// Crosslink Descriptors = Crosslink Descriptor ,
///   { { " " } , "&" , { " " } , Crosslink Descriptor } ;
fn crosslink_descriptors(i: &str) -> ParseResult<CrosslinkDescriptors> {
    let separator = delimited(space0, char('&'), space0);
    let mut parser = separated_list1(separator, crosslink_descriptor);
    // FIXME: Add error handling / reporting!
    parser(i)
}

/// Crosslink Descriptor = position ,
///   ( "-" (* Donor-Acceptor *)
///   | "=" (* Acceptor=Donor *)
///   ) , position ;
fn crosslink_descriptor(i: &str) -> ParseResult<CrosslinkDescriptor> {
    let mut parser = map(tuple((position, one_of("-="), position)), |(left, kind, right)| match kind {
        '-' => CrosslinkDescriptor::DonorAcceptor,
        '=' => CrosslinkDescriptor::AcceptorDonor,
        _ => unreachable!()
    }(left, right));
    // FIXME: Add error handling / reporting!
    parser(i)
}

/// position = "1" | "2" | "3" | "4" | "5" ;
fn position(i: &str) -> ParseResult<Position> {
    // SAFETY: If a 1, 2, 3, 4, or 5 is parsed, then calling `.to_digit()` will always return `Some(...)`, and casting
    // via `as u8` is also guaranteed not to overflow or truncate, since `5` is the largest parsable digit
    #[allow(clippy::cast_possible_truncation)]
    let mut parser = map(one_of("12345"), |p| p.to_digit(10).unwrap() as u8);
    // FIXME: Add error handling / reporting!
    parser(i)
}

type ParseResult<'a, O> = IResult<&'a str, O, LabeledParseError<'a, MuropeptideErrorKind>>;

#[derive(Clone, Eq, PartialEq, Debug, Diagnostic, Error)]
pub enum ConstructionError {
    #[diagnostic(transparent)]
    #[error(transparent)]
    PolychemError(#[from] Box<PolychemError>),

    // FIXME: Eventually make this error either more informative (printing the number of each), or replace it!
    #[error("the number of described crosslinks (e.g. 3-3) doesn't match the number of crosslink connectors (=)")]
    CrosslinkCountMismatch,

    // FIXME: Eventually make this error either more informative, or replace it!
    #[error("failed to find two glycan chains to bond")]
    NoGlycan,

    // FIXME: Eventually make this error either more informative, or replace it!
    #[error("failed to find two peptide stems to bond")]
    NoPeptide,

    // FIXME: Eventually make this error either more informative, or replace it!
    #[error("failed to look up the stem residues as described by the crosslink descriptor")]
    NoStemResidue,
}

#[derive(Clone, Eq, PartialEq, Debug, Diagnostic, Error)]
pub enum MuropeptideErrorKind {
    #[error("expected an ASCII letter, optionally followed by any number of ASCII letters, digits, and underscores")]
    ExpectedIdentifier,

    // FIXME: Kill this and merge into the error below!
    #[diagnostic(transparent)]
    #[error(transparent)]
    ConstructionError(ConstructionError),

    #[diagnostic(transparent)]
    #[error(transparent)]
    CompositionError(#[from] PolychemErrorKind),

    #[diagnostic(help(
        "this is an internal error that you shouldn't ever see! If you have gotten this error, \
        then please report it as a bug!"
    ))]
    #[error("internal `nom` error: {0:?}")]
    NomError(ErrorKind),

    #[diagnostic(help(
        "check the unparsed region for errors, or remove it from the rest of the muropeptide"
    ))]
    #[error("could not interpret the full input as a valid muropeptide structure")]
    Incomplete,
}

impl LabeledErrorKind for MuropeptideErrorKind {
    fn label(&self) -> Option<&'static str> {
        Some(match self {
            // FIXME: Need to add branches for passing labels through the transparent errors?
            Self::Incomplete => "input was valid up until this point",
            Self::NomError(_) => "the region that triggered this bug!",
            _ => return None,
        })
    }
}

// FIXME: Can I get rid of this?
impl<'a> FromExternalError<'a, ConstructionError> for MuropeptideErrorKind {
    const FATAL: bool = true;

    fn from_external_error(input: &'a str, e: ConstructionError) -> LabeledParseError<'a, Self> {
        LabeledParseError::new(input, Self::ConstructionError(e))
    }
}

impl From<ErrorKind> for MuropeptideErrorKind {
    fn from(value: ErrorKind) -> Self {
        match value {
            ErrorKind::Eof => Self::Incomplete,
            kind => Self::NomError(kind),
        }
    }
}

#[cfg(test)]
mod tests {
    use once_cell::sync::Lazy;
    use polychem::{AtomicDatabase, Charged, Massive, PolymerDatabase, Polymerizer};
    use rust_decimal::Decimal;
    use rust_decimal_macros::dec;

    use super::*;

    static ATOMIC_DB: Lazy<AtomicDatabase> = Lazy::new(AtomicDatabase::default);
    static POLYMER_DB: Lazy<PolymerDatabase> = Lazy::new(|| {
        PolymerDatabase::new(
            &ATOMIC_DB,
            "polymer_database.kdl",
            include_str!("../tests/data/polymer_database.kdl"),
        )
        .unwrap()
    });

    static POLYMERIZER: Lazy<Polymerizer> = Lazy::new(|| Polymerizer::new(&ATOMIC_DB, &POLYMER_DB));

    #[test]
    fn test_identifier() {
        // Valid Identifiers
        assert_eq!(identifier("Ac"), Ok(("", "Ac")));
        assert_eq!(identifier("H2O"), Ok(("", "H2O")));
        assert_eq!(identifier("Anh"), Ok(("", "Anh")));
        assert_eq!(identifier("E2E"), Ok(("", "E2E")));
        assert_eq!(identifier("no_way"), Ok(("", "no_way")));
        assert_eq!(identifier("H"), Ok(("", "H")));
        assert_eq!(identifier("p"), Ok(("", "p")));
        // Invalid Identifiers
        assert!(identifier(" H2O").is_err());
        assert!(identifier("1").is_err());
        assert!(identifier("9999").is_err());
        assert!(identifier("0").is_err());
        assert!(identifier("00145").is_err());
        assert!(identifier("+H").is_err());
        assert!(identifier("[H]").is_err());
        assert!(identifier("Øof").is_err());
        assert!(identifier("2xAc").is_err());
        assert!(identifier("-Ac").is_err());
        assert!(identifier("_Ac").is_err());
        // Multiple Identifiers
        assert_eq!(identifier("OH-p"), Ok(("-p", "OH")));
        assert_eq!(identifier("HeH 2slow"), Ok((" 2slow", "HeH")));
        assert_eq!(identifier("Gefählt"), Ok(("ählt", "Gef")));
        // This is a weird unicode 6
        assert!('𝟨'.is_numeric());
        assert!(!'𝟨'.is_ascii_digit());
        assert_eq!(identifier("C2H𝟨O"), Ok(("𝟨O", "C2H")));
    }

    #[test]
    fn test_multiplier() {
        macro_rules! assert_multiplier {
            ($input:literal, $output:literal, $count:literal) => {
                let (rest, count) = multiplier($input).unwrap();
                assert_eq!((rest, u32::from(count)), ($output, $count));
            };
        }

        // Valid Multipliers
        assert_multiplier!("1x", "", 1);
        assert_multiplier!("10x", "", 10);
        assert_multiplier!("422x", "", 422);
        assert_multiplier!("9999x", "", 9999);
        // Invalid Multipliers
        assert!(multiplier("1").is_err());
        assert!(multiplier("10").is_err());
        assert!(multiplier("422").is_err());
        assert!(multiplier("9999").is_err());
        assert!(multiplier("0").is_err());
        assert!(multiplier("01").is_err());
        assert!(multiplier("00145").is_err());
        assert!(multiplier("H").is_err());
        assert!(multiplier("p").is_err());
        assert!(multiplier("+H").is_err());
        assert!(multiplier("[H]").is_err());
        // Multiple Multipliers
        assert_multiplier!("1xOH", "OH", 1);
        assert_multiplier!("42xHeH", "HeH", 42);
    }

    #[test]
    fn test_position() {
        // Valid Positions
        assert_eq!(position("1"), Ok(("", 1)));
        assert_eq!(position("2"), Ok(("", 2)));
        assert_eq!(position("3"), Ok(("", 3)));
        assert_eq!(position("4"), Ok(("", 4)));
        assert_eq!(position("5"), Ok(("", 5)));
        // Invalid Positions
        assert!(position("0").is_err());
        assert!(position("6").is_err());
        assert!(position("60").is_err());
        assert!(position("8422").is_err());
        assert!(position("01").is_err());
        assert!(position("00145").is_err());
        assert!(position("H").is_err());
        assert!(position("p").is_err());
        assert!(position("+H").is_err());
        assert!(position("[H]").is_err());
        // Multiple Positions
        assert_eq!(position("10"), Ok(("0", 1)));
        assert_eq!(position("1OH"), Ok(("OH", 1)));
        assert_eq!(position("42HeH"), Ok(("2HeH", 4)));
    }

    #[test]
    fn test_crosslink_descriptor() {
        // Valid Crosslink Descriptors
        assert_eq!(
            crosslink_descriptor("4-3"),
            Ok(("", CrosslinkDescriptor::DonorAcceptor(4, 3)))
        );
        assert_eq!(
            crosslink_descriptor("3=4"),
            Ok(("", CrosslinkDescriptor::AcceptorDonor(3, 4)))
        );
        assert_eq!(
            crosslink_descriptor("4-2"),
            Ok(("", CrosslinkDescriptor::DonorAcceptor(4, 2)))
        );
        assert_eq!(
            crosslink_descriptor("2=4"),
            Ok(("", CrosslinkDescriptor::AcceptorDonor(2, 4)))
        );
        assert_eq!(
            crosslink_descriptor("1-3"),
            Ok(("", CrosslinkDescriptor::DonorAcceptor(1, 3)))
        );
        assert_eq!(
            crosslink_descriptor("3=1"),
            Ok(("", CrosslinkDescriptor::AcceptorDonor(3, 1)))
        );
        // Invalid Crosslink Descriptors
        assert!(crosslink_descriptor("0").is_err());
        assert!(crosslink_descriptor("4-").is_err());
        assert!(crosslink_descriptor("3=").is_err());
        assert!(crosslink_descriptor("4->3").is_err());
        assert!(crosslink_descriptor("6").is_err());
        assert!(crosslink_descriptor("60").is_err());
        assert!(crosslink_descriptor("8422").is_err());
        assert!(crosslink_descriptor("01").is_err());
        assert!(crosslink_descriptor("00145").is_err());
        assert!(crosslink_descriptor("H").is_err());
        assert!(crosslink_descriptor("p").is_err());
        assert!(crosslink_descriptor("+H").is_err());
        assert!(crosslink_descriptor("[H]").is_err());
        // Multiple Crosslink Descriptors
        assert_eq!(
            crosslink_descriptor("4-3 & 3=3"),
            Ok((" & 3=3", CrosslinkDescriptor::DonorAcceptor(4, 3)))
        );
        assert_eq!(
            crosslink_descriptor("3=3) (Am)"),
            Ok((") (Am)", CrosslinkDescriptor::AcceptorDonor(3, 3)))
        );
    }

    #[test]
    #[allow(clippy::cognitive_complexity)]
    fn test_crosslink_descriptors() {
        let da43 = CrosslinkDescriptor::DonorAcceptor(4, 3);
        let ad34 = CrosslinkDescriptor::AcceptorDonor(3, 4);
        let da33 = CrosslinkDescriptor::DonorAcceptor(3, 3);
        let ad33 = CrosslinkDescriptor::AcceptorDonor(3, 3);
        let da42 = CrosslinkDescriptor::DonorAcceptor(4, 2);
        let ad24 = CrosslinkDescriptor::AcceptorDonor(2, 4);
        let da13 = CrosslinkDescriptor::DonorAcceptor(1, 3);
        let ad31 = CrosslinkDescriptor::AcceptorDonor(3, 1);
